5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1764_1576.log
== SUBMITION (2019-05-30 13:00:09) 
-- CODE:
from numpy import *
v1 = array(eval(input()))
v2 = array(eval(input()))
i = 0
e=0
b=0
while(i<size(v1)):
	if(v1[i]==11 and v2[i]==33):
		b=b+1
	elif(v1[i]==22 and v2[i]==11):
		b=b+1
	elif(v1[i]==33 and v2[i]==22):
		b=b+1
	elif(v2[i]==11 and v1[i]==33):
		e=e+1
	elif(v2[i]==22 and v1[i]==11):
		e=e+1
	elif(v2[i]==33 and v1[i]==22):
		e=e+1
		
	
	i=i+1
if(e>b):
	m = "EUSAPIA"
elif(e<b):
	m = "BARSANULFO"
else:
	m = "EMPATE"
	
print(i)
print(m)
-- EXECUTION TIME:
0.418211
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:52:35) 
-- CODE:
from numpy import *
v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
e=0
b=0

while(i<size(v1)):
	if(v1[i]==11 and v2[i]==33):
		b=b+1
	elif(v1[i]==22 and v2[i]==11):
		b=b+1
	elif(v1[i]==33 and v2[i]==22):
		b=b+1
	
	elif(v2[i]==11 and v1[i]==33):
		e=e+1
	elif(v2[i]==22 and v1[i]==11):
		e=e+1
	elif(v2[i]==33 and v1[i]==22):
		e=e+1
	
	
	i=i+1
if(e>b):
	m = "EUSAPIA"
elif(e<b):
	m = "BARSANULFO"
else:
	m = "EMPATE"
	
print(i)
print(m)
-- EXECUTION TIME:
0.432999
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:53:19) 
-- CODE:
from numpy import *
v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
e=0
b=0

while(i<size(v1)):
	if(v1[i]==11 and v2[i]==33):
		b=b+1
	elif(v1[i]==22 and v2[i]==11):
		b=b+1
	elif(v1[i]==33 and v2[i]==22):
		b=b+1
	
	elif(v2[i]==11 and v1[i]==33):
		e=e+1
	elif(v2[i]==22 and v1[i]==11):
		e=e+1
	elif(v2[i]==33 and v1[i]==22):
		e=e+1
	else(v2[i]==v1[i]):
		
	
	
	i=i+1
if(e>b):
	m = "EUSAPIA"
elif(e<b):
	m = "BARSANULFO"
else:
	m = "EMPATE"
	
print(i)
print(m)
-- EXECUTION TIME:
0.208763
-- ERROR:
  File "/home/codebench/codes/1764/1576/main.py", line 23
    else(v2[i]==v1[i]):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:53:29) 
-- CODE:
from numpy import *
v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
e=0
b=0

while(i<size(v1)):
	if(v1[i]==11 and v2[i]==33):
		b=b+1
	elif(v1[i]==22 and v2[i]==11):
		b=b+1
	elif(v1[i]==33 and v2[i]==22):
		b=b+1
	
	elif(v2[i]==11 and v1[i]==33):
		e=e+1
	elif(v2[i]==22 and v1[i]==11):
		e=e+1
	elif(v2[i]==33 and v1[i]==22):
		e=e+1
	else(v2[i]==v1[i]):
		e=e
		b=b
	
	
	i=i+1
if(e>b):
	m = "EUSAPIA"
elif(e<b):
	m = "BARSANULFO"
else:
	m = "EMPATE"
	
print(i)
print(m)
-- EXECUTION TIME:
0.147032
-- ERROR:
  File "/home/codebench/codes/1764/1576/main.py", line 23
    else(v2[i]==v1[i]):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:53:38) 
-- CODE:
from numpy import *
v1 = array(eval(input()))
v2 = array(eval(input()))

i = 0
e=0
b=0

while(i<size(v1)):
	if(v1[i]==11 and v2[i]==33):
		b=b+1
	elif(v1[i]==22 and v2[i]==11):
		b=b+1
	elif(v1[i]==33 and v2[i]==22):
		b=b+1
	
	elif(v2[i]==11 and v1[i]==33):
		e=e+1
	elif(v2[i]==22 and v1[i]==11):
		e=e+1
	elif(v2[i]==33 and v1[i]==22):
		e=e+1
	
	
	
	i=i+1
if(e>b):
	m = "EUSAPIA"
elif(e<b):
	m = "BARSANULFO"
else:
	m = "EMPATE"
	
print(i)
print(m)
-- EXECUTION TIME:
0.279723
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
